--- a/01자바스크립트시작.html
+++ b/01자바스크립트시작.html
@@ -15,9 +15,11 @@
         let result = score < 0 || score > 100;
         // (result) 는 실행을 결정하기 위한 조건식 - 참 또는 거짓으로 결과가 나오는 식
         if (result) {
-            console.log('잘못된 점수입니다.')}
+            console.log('잘못된 점수입니다.');
+            }
         else {
-            console.log('올바른 점수입니다.')}
+            console.log('올바른 점수입니다.');
+            }
         // 관계식1 논리연산(AND 또는 OR) 관계식2
         // score >= 70 && score 
         // && 둘 다 만족하면(AND), || 둘중에 하나 만족하는(OR) ==> 결과 true(참)
