--- a/01자바스크립트시작.html
+++ b/01자바스크립트시작.html
@@ -62,7 +62,7 @@
         <li>document</li>
     </ul>
     <!-- 
-    document 객체의 주요 메소드 :
+    document 객체의 주요 메소드 : (테스트는 라이브서버 실행 후 개발자 도구 콘솔에서)
     1. 요소 1개 가져오기
     document.getElementById('title')
     document.querySelector('ul')
