--- a/15시간표__연습.html
+++ b/15시간표__연습.html
@@ -6,7 +6,7 @@
     <script defer src="./js/15ex.js"></script>
 </head>
 <body>
-    <table border="1">
+    <table>
         <tr id="time">
             <th></th>
         </tr>
